Fix contrast error

--- a/Social Network Frontend/src/styles/style.scss
+++ b/Social Network Frontend/src/styles/style.scss
@@ -1069,7 +1069,7 @@ form {
     }
   
     .update-button {
-      background-color: #4CAF50;
+      background-color: darkgreen;
       color: white;
       border: none;
     }
